1주차 프리코스 문제 풀이